Stop having the scrollbar extend to the fixed navbar. It should only display on the scrollable content.

--- a/css/main.css
+++ b/css/main.css
@@ -743,11 +743,14 @@ nav .brand-logo.logo-main {
 .navbar-fixed {
 	position: fixed;
 }
-.main-container {
+#main-scrollarea {
+	height: calc(100vh - 56px);
 	margin-top: 56px;
+	overflow-y: scroll;
 }
 @media only screen and (min-width: 601px) {
-	.main-container {
+	#main-scrollarea {
+		height: calc(100vh - 64px);
 		margin-top: 64px;
 	}
 }
